2004-01-09  Jesper Harder  <harder@ifa.au.dk>

	* pop3.el (pop3-md5): Remove.
	(pop3-apop): Replace pop3-md5 with md5.

	* mm-bodies.el: base64 is always built-in.

	* gnus-sum.el (gnus-summary-from-or-to-or-newsgroups): Use
	with-current-buffer.

2004-01-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* canlock.el (canlock-insert-header): Remove excessive grouping in
	regexp.

	* gnus-sum.el (gnus-summary-read-document): Ditto.

	* gnus-uu.el (gnus-uu-part-number): Ditto.

	* html2text.el (html2text-remove-tags): Ditto.
	(html2text-format-tags): Ditto.
	(html2text-format-single-elements): Ditto.

	* mml.el (mml-parse-1): Ditto.

2004-01-08  Jesper Harder  <harder@ifa.au.dk>

	* gnus-sum.el (gnus-summary-update-mark): Revert previous change.

	* gnus-group.el (gnus-group-mark-group): Fix for multibyte marks.

	* gnus-sum.el (gnus-summary-update-mark): Fix for multibyte marks.

	* gnus-util.el (gnus-replace-in-string): Remove Emacs 20 code.

2003-11-15  Simon Josefsson  <jas@extundo.com>

	* pgg-gpg.el (pgg-gpg-lookup-all-secret-keys)
	(pgg-gpg-lookup-key): Use regexp match instead of
	split-string (split-string is different between emacs 21.2 and
	21.4).  Reported by ultrasoul@ultrasoul.com (David D. Smith).

2004-01-08  Jesper Harder  <harder@ifa.au.dk>

	* gnus-art.el (gnus-mime-view-all-parts)
	(gnus-article-part-wrapper, gnus-article-view-part): Use
	with-current-buffer.

2004-01-07  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-disable-spam-split-during-ham-respool)
	(spam-spamoracle-database, spam-cache-lookups)
	(spam-split-last-successful-check, spam-clear-cache, spam-xor)
	(spam-group-ham-mark-p, spam-group-spam-mark-p)
	(spam-group-ham-marks, spam-group-spam-marks)
	(spam-group-spam-contents-p, spam-group-ham-contents-p)
	(spam-list-of-processors, spam-list-of-statistical-checks): doc
	fix, also add spam-use-blackholes to the statistical checks
	(spam-fetch-field-fast): new interface to fetching fields, may
	become a macro